# webgame

./: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.mjs  generate.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: deploy.yml
contracts/: Token.sol
solana-programs/game-rewards/: Anchor.toml  package.json  tsconfig.json
solana-programs/game-rewards/programs/game-rewards/: Cargo.toml
solana-programs/game-rewards/programs/game-rewards/src/: lib.rs
solana-programs/game-rewards/tests/: game-rewards.ts
src/: middleware.ts  sentry.client.config.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/: ClaimToken.ts
src/app/api-test/: page.tsx
src/app/api/claim/: route.production.ts  route.ts
src/app/api/mint-tokens/: route.ts
src/app/api/route/: claim.ts
src/app/api/solana-claim/: route.ts
src/app/game/: page.tsx
src/app/pump/: page.tsx
src/app/racing/: page.tsx
src/app/sonic/: page.tsx
src/app/test-env/: route.ts
src/components/: SuperJumpQuest.tsx  claimToken.ts  claimTokenButton.tsx  clickTocopyEmail.tsx  connectWallet.tsx
src/lib/: constants.ts  gameUtils.ts  rateLimit.ts  redis.ts  signer.ts  types.ts  validators.ts
src/lib/contracts/: ClaimToken.ts  claimSolana.ts  claimTokenBackend.ts  contractConfig.ts  solanaConfig.ts
src/lib/hooks/: useWallet.ts
test/: claim.test.ts
