[package]
name = "game-rewards"
version = "0.1.0"
description = "Solana program for game reward distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
